INCLUDE_DIRECTORIES( support/include )
IF( RTEMS_BUILD_SAMPLES )
  ADD_SUBDIRECTORY( samples )
ENDIF()

IF( RTEMS_BUILD_RHEALSTONE )
  ADD_SUBDIRECTORY( rhealstone )
ENDIF()

IF( RTEMS_BUILD_FSTESTS )
  ADD_SUBDIRECTORY( fstests )
ENDIF()

IF( RTEMS_BUILD_LIBTESTS )
  ADD_SUBDIRECTORY( libtests )
ENDIF()

IF( RTEMS_BUILD_MPTESTS AND RTEMS_MULTIPROCESSING )
  ADD_SUBDIRECTORY( mptests )
ENDIF()

IF( RTEMS_BUILD_PSXTESTS )
  ADD_SUBDIRECTORY( psxtests )
ENDIF()

IF( RTEMS_BUILD_PSXTMTESTS )
  ADD_SUBDIRECTORY( psxtmtests )
ENDIF()

# TODO
# IF (RTEMS_BUILD_SMPTESTS AND RTEMS_SMP )
#   ADD_SUBDIRECTORY( smptests )
# ENDIF()

IF( RTEMS_BUILD_SPTESTS )
  ADD_SUBDIRECTORY( sptests )
ENDIF()
 
IF( RTEMS_BUILD_TMTESTS )
  ADD_SUBDIRECTORY( tmtests )
ENDIF()

