PREINSTALL_HEADERS( rtems
  include/console.h
  include/clockdrv.h
  include/rtems/framebuffer.h
  include/iosupp.h
  include/ringbuf.h
  include/rtc.h
  include/rtems/tod.h
  include/spurious.h
  include/vmeintr.h
  include/rtems/assoc.h
  include/rtems/deviceio.h
  include/rtems/error.h
  include/rtems/libcsupport.h
  include/rtems/libio.h
  include/rtems/libio_.h
  include/rtems/malloc.h
  include/rtems/termiostypes.h
  include/rtems/gxx_wrappers.h
)

SET( LIBCSUPPORT_SRC
  src/error.c 
  src/__assert.c
  src/assoclocalbyname.c
  src/assoclocalbyremotebitfield.c 
  src/assoclocalbyremote.c
  src/assocnamebad.c 
  src/assocnamebylocalbitfield.c
  src/assocnamebylocal.c 
  src/assocnamebyremotebitfield.c
  src/assocnamebyremote.c 
  src/assocptrbylocal.c 
  src/assocptrbyname.c
  src/assocptrbyremote.c 
  src/assocremotebylocalbitfield.c
  src/assocremotebylocal.c 
  src/assocremotebyname.c
  src/base_fs.c 
  src/mount.c 
  src/unmount.c 
  src/libio.c
  src/mount-mgr.c 
  src/mount-mktgt.c 
  src/libio_init.c
  src/privateenv.c
  src/libio_helper_null.c
  src/libio_exit.c
  src/open_dev_console.c 
  src/__usrenv.c 
  src/rtems_mkdir.c
  src/uenvgetgroups.c
  src/cfgetispeed.c 
  src/cfgetospeed.c 
  src/cfsetispeed.c
  src/cfsetospeed.c 
  src/tcgetattr.c 
  src/tcsetattr.c 
  src/tcdrain.c
  src/tcflow.c 
  src/tcflush.c 
  src/tcgetpgrp.c 
  src/tcsendbreak.c
  src/tcsetpgrp.c 
  src/termios.c 
  src/termiosinitialize.c
  src/termios_baud2index.c 
  src/termios_baud2num.c 
  src/termios_num2baud.c
  src/termios_setinitialbaud.c 
  src/termios_baudtable.c 
  src/cfsetspeed.c
  src/cfmakeraw.c 
  src/termios_setbestbaud.c
  src/open.c 
  src/close.c 
  src/read.c 
  src/write.c
  src/write_r.c
  src/lseek.c 
  src/ioctl.c 
  src/mkdir.c 
  src/mknod.c 
  src/mkfifo.c 
  src/rmdir.c
  src/chdir.c 
  src/chmod.c 
  src/fchdir.c 
  src/fchmod.c 
  src/fchown.c 
  src/chown.c
  src/link.c 
  src/unlink.c 
  src/umask.c 
  src/ftruncate.c 
  src/utime.c 
  src/fstat.c
  src/fcntl.c 
  src/fpathconf.c 
  src/getdents.c 
  src/fsync.c 
  src/fdatasync.c
  src/pipe.c 
  src/dup.c 
  src/dup2.c 
  src/symlink.c 
  src/readlink.c
  src/chroot.c 
  src/sync.c 
  src/_rename_r.c 
  src/statvfs.c 
  src/utimes.c 
  src/lchown.c
  src/readdir_r.c
  src/getcwd.c
  src/getegid.c 
  src/geteuid.c 
  src/getgid.c 
  src/getgroups.c
  src/getlogin.c 
  src/getpgrp.c 
  src/getpid.c 
  src/getppid.c 
  src/getuid.c
  src/seteuid.c 
  src/setgid.c 
  src/setuid.c 
  src/setegid.c 
  src/setpgid.c
  src/setsid.c
  src/malloc_initialize.c 
  src/malloc.c
  src/realloc.c 
  src/_calloc_r.c 
  src/_malloc_r.c
  src/free.c 
  src/_free_r.c
  src/_realloc_r.c 
  src/mallocfreespace.c
  src/mallocgetheapptr.c 
  src/mallocsetheapptr.c
  src/mallocinfo.c 
  src/malloc_walk.c
  src/posix_memalign.c
  src/rtems_memalign.c 
  src/malloc_deferred.c
  src/malloc_dirtier.c 
  src/malloc_p.h 
  src/rtems_malloc.c
  src/rtems_heap_extend_via_sbrk.c
  src/rtems_heap_null_extend.c
  src/rtems_heap_extend.c
  src/rtems_heap_greedy.c
  src/cachealignedalloc.c
  src/cachecoherentalloc.c
  src/pwdgrp.c
  src/getgrent.c
  src/getgrnam.c
  src/getpwent.c
  src/ctermid.c
  src/isatty.c 
  src/isatty_r.c
  src/ttyname.c
  src/__getpid.c 
  src/__gettod.c 
  src/__times.c
  src/truncate.c 
  src/access.c 
  src/stat.c 
  src/lstat.c 
  src/pathconf.c
  src/newlibc_reent.c 
  src/newlibc_init.c 
  src/newlibc_exit.c
  src/kill_noposix.c 
  src/utsname.c 
  src/realpath.c
  src/strlcpy.c 
  src/strlcat.c 
  src/issetugid.c
  src/gxx_wrappers.c 
  src/getchark.c 
  src/printk.c
  src/printk_plugin.c 
  src/putk.c 
  src/vprintk.c
  src/rtems_putc.c
  src/printf_plugin.c
  src/sup_fs_location.c
  src/sup_fs_eval_path.c
  src/sup_fs_eval_path_generic.c
  src/sup_fs_check_permissions.c
  src/sup_fs_next_token.c
  src/sup_fs_exist_in_same_instance.c
  src/sup_fs_mount_iterate.c
  src/sup_fs_deviceio.c
  src/clonenode.c
  src/freenode.c
  src/resource_snapshot.c
  src/getpagesize.c 
  src/getrusage.c
  src/flockfile.c 
  src/funlockfile.c 
  src/ftrylockfile.c
  src/envlock.c 
)

IF( RTEMS_NEWLIB )
  LIST( APPEND LIBCSUPPORT_SRC src/readv.c src/writev.c )
ENDIF()


ADD_LIBRARY( rtems_libcsupport ${LIBCSUPPORT_SRC} )
ADD_DEPENDENCIES( rtems_libcsupport rtems_preinstall_headers )

SET( CALLOC_SRC src/calloc.c )
ADD_LIBRARY( rtems_calloc ${CALLOC_SRC} )
TARGET_COMPILE_OPTIONS( rtems_calloc PRIVATE -fno-builtin )
