PREINSTALL_HEADERS( rtems/posix
  include/rtems/posix/sigset.h
  include/rtems/posix/key.h
  include/rtems/posix/keyimpl.h
  include/rtems/posix/config.h
  include/rtems/posix/posixapi.h
)

SET( POSIX_SRC
  src/nanosleep.c
  src/clockgettime.c
  src/clocksettime.c
  src/clockgetres.c
  src/sysconf.c
  src/fork.c
  src/vfork.c
  src/wait.c
  src/waitpid.c
  src/key.c 
  src/keycreate.c
  src/keydelete.c
  src/keygetspecific.c
  src/keyfreememory.c 
  src/keyrundestructors.c
  src/keysetspecific.c
  src/pthreadonce.c
  src/sigaddset.c 
  src/sigdelset.c 
  src/sigfillset.c
  src/sigemptyset.c 
  src/sigismember.c
  src/sigprocmask.c
)

IF( RTEMS_PTHREADS )
  PREINSTALL_HEADERS_ROOT(
    include/aio.h
    include/mqueue.h
  )
  IF( NOT HAVE_SEMAPHORE_H )
    PREINSTALL_HEADERS_ROOT( include/semaphore.h )
  ENDIF()
  PREINSTALL_HEADERS( rtems/posix
    include/rtems/posix/aio_misc.h
    include/rtems/posix/cancel.h
    include/rtems/posix/cond.h
    include/rtems/posix/condimpl.h
    include/rtems/posix/mqueue.h
    include/rtems/posix/mqueueimpl.h
    include/rtems/posix/mutex.h
    include/rtems/posix/muteximpl.h
    include/rtems/posix/priorityimpl.h
    include/rtems/posix/psignal.h
    include/rtems/posix/psignalimpl.h
    include/rtems/posix/pthread.h
    include/rtems/posix/pthreadimpl.h
    include/rtems/posix/ptimer.h
    include/rtems/posix/semaphore.h
    include/rtems/posix/semaphoreimpl.h
    include/rtems/posix/threadsup.h
    include/rtems/posix/time.h
    include/rtems/posix/timer.h
    include/rtems/posix/timerimpl.h
    include/rtems/posix/barrier.h
    include/rtems/posix/barrierimpl.h
    include/rtems/posix/rwlock.h
    include/rtems/posix/rwlockimpl.h
    include/rtems/posix/spinlock.h
    include/rtems/posix/spinlockimpl.h
  )
  LIST( APPEND POSIX_SRC
    src/aio_cancel.c 
    src/aio_error.c 
    src/aio_fsync.c
    src/aio_read.c 
    src/aio_return.c 
    src/aio_suspend.c 
    src/aio_write.c
    src/lio_listio.c 
    src/aio_misc.c
    src/_execve.c 
    src/execl.c 
    src/execle.c 
    src/execlp.c
    src/execv.c 
    src/execve.c 
    src/execvp.c
    src/pthreadatfork.c
    src/barrierattrdestroy.c 
    src/barrierattrgetpshared.c
    src/barrierattrinit.c 
    src/barrierattrsetpshared.c 
    src/pbarrier.c
    src/pbarrierdestroy.c 
    src/pbarrierinit.c
    src/pbarriertranslatereturncode.c 
    src/pbarrierwait.c
    src/cancel.c 
    src/canceleval.c 
    src/cancelrun.c
    src/cleanuppop.c 
    src/cleanuppush.c 
    src/setcancelstate.c
    src/setcanceltype.c 
    src/testcancel.c
    src/cond.c 
    src/condattrdestroy.c
    src/condattrgetpshared.c 
    src/condattrinit.c 
    src/condattrsetpshared.c
    src/condbroadcast.c 
    src/conddefaultattributes.c 
    src/conddestroy.c
    src/condinit.c 
    src/condsignal.c 
    src/condsignalsupp.c
    src/condtimedwait.c 
    src/condwait.c 
    src/condwaitsupp.c 
    src/condget.c
    src/mmap.c 
    src/mprotect.c
    src/munmap.c
    src/mqueue.c 
    src/mqueueclose.c
    src/mqueuecreatesupp.c 
    src/mqueuedeletesupp.c 
    src/mqueuegetattr.c
    src/mqueuenotify.c 
    src/mqueueopen.c
    src/mqueuereceive.c 
    src/mqueuerecvsupp.c 
    src/mqueuesend.c
    src/mqueuesendsupp.c 
    src/mqueuesetattr.c 
    src/mqueuetimedreceive.c
    src/mqueuetimedsend.c 
    src/mqueuetranslatereturncode.c
    src/mqueueunlink.c
    src/mutexattrdestroy.c 
    src/mutexattrgetprioceiling.c
    src/mutexattrgetprotocol.c 
    src/mutexattrgetpshared.c
    src/mutexattrgettype.c 
    src/mutexattrinit.c 
    src/mutexattrsetprioceiling.c
    src/mutexattrsetprotocol.c 
    src/mutexattrsetpshared.c
    src/mutexattrsettype.c 
    src/mutex.c 
    src/mutexdestroy.c 
    src/mutexget.c
    src/mutexgetprioceiling.c 
    src/mutexinit.c 
    src/mutexlock.c
    src/mutexlocksupp.c 
    src/mutexsetprioceiling.c 
    src/mutextimedlock.c
    src/mutextranslatereturncode.c 
    src/mutextrylock.c 
    src/mutexunlock.c
    src/pthreadatfork.c 
    src/pthreadattrdestroy.c
    src/pthreadattrgetdetachstate.c 
    src/pthreadattrgetinheritsched.c
    src/pthreadattrgetschedparam.c 
    src/pthreadattrgetschedpolicy.c
    src/pthreadattrgetscope.c 
    src/pthreadattrgetstackaddr.c
    src/pthreadattrgetstack.c 
    src/pthreadattrgetstacksize.c
    src/pthreadattrinit.c 
    src/pthreadattrsetdetachstate.c
    src/pthreadattrsetguardsize.c 
    src/pthreadattrsetinheritsched.c
    src/pthreadattrsetschedparam.c 
    src/pthreadattrsetschedpolicy.c
    src/pthreadattrsetscope.c 
    src/pthreadattrsetstackaddr.c
    src/pthreadattrsetstack.c 
    src/pthreadattrsetstacksize.c
    src/pthreadgetattrnp.c
    src/pthreadattrgetguardsize.c 
    src/pthread.c
    src/pthreadcreate.c 
    src/pthreaddetach.c 
    src/pthreadequal.c
    src/pthreadexit.c 
    src/pthreadgetcpuclockid.c
    src/pthreadgetschedparam.c
    src/pthreadinitthreads.c 
    src/pthreadjoin.c 
    src/pthreadkill.c
    src/pthreadself.c
    src/pthreadsetschedparam.c 
    src/pthreadsigmask.c
    src/psxpriorityisvalid.c 
    src/psxtransschedparam.c
    src/pthreadattrcompare.c
    src/psignal.c 
    src/alarm.c 
    src/kill.c 
    src/killinfo.c
    src/kill_r.c 
    src/pause.c 
    src/psignalclearprocesssignals.c
    src/psignalsetprocesssignals.c 
    src/psignalchecksignal.c
    src/psignalclearsignals.c 
    src/psignalunblockthread.c 
    src/pthreadkill.c
    src/pthreadsigmask.c 
    src/sigaction.c
    src/sigpending.c
    src/sigqueue.c 
    src/sigsuspend.c 
    src/sigtimedwait.c
    src/sigwait.c 
    src/sigwaitinfo.c 
    src/signal_2.c 
    src/ualarm.c
    src/prwlock.c 
    src/prwlockdestroy.c 
    src/prwlockinit.c
    src/prwlockrdlock.c 
    src/prwlocktimedrdlock.c 
    src/prwlocktimedwrlock.c
    src/prwlocktryrdlock.c 
    src/prwlocktrywrlock.c 
    src/prwlockunlock.c
    src/prwlockwrlock.c 
    src/rwlockattrdestroy.c 
    src/rwlockattrgetpshared.c
    src/rwlockattrinit.c 
    src/rwlockattrsetpshared.c
    src/prwlocktranslatereturncode.c
    src/semaphore.c 
    src/semaphorecreatesupp.c
    src/semaphoredeletesupp.c
    src/semaphoretranslatereturncode.c 
    src/semaphorewaitsupp.c
    src/semclose.c 
    src/semdestroy.c 
    src/semgetvalue.c 
    src/seminit.c
    src/semopen.c 
    src/sempost.c 
    src/semtimedwait.c 
    src/semtrywait.c
    src/semunlink.c 
    src/semwait.c
    src/pspin.c 
    src/pspindestroy.c 
    src/pspininit.c
    src/pspinlock.c 
    src/pspinlocktranslatereturncode.c 
    src/pspintrylock.c
    src/pspinunlock.c
    src/adjtime.c 
    src/posixtimespecabsolutetimeout.c
    src/clockgetcpuclockid.c 
    src/clockgetenableattr.c 
    src/clocksetenableattr.c
    src/ptimer.c 
    src/timercreate.c 
    src/timerdelete.c
    src/timergetoverrun.c 
    src/timergettime.c 
    src/timersettime.c
    src/timertsr.c 
    src/timerinserthelper.c
    src/getitimer.c 
    src/setitimer.c
    src/psxpriorityisvalid.c
    src/psxnametoid.c
    src/sched_getparam.c 
    src/sched_getprioritymax.c
    src/sched_getprioritymin.c 
    src/sched_getscheduler.c
    src/sched_rr_get_interval.c 
    src/sched_setparam.c
    src/sched_setscheduler.c 
    src/sched_yield.c
  )
  IF( RTEMS_SMP )
    LIST( APPEND POSIX_SRC
      src/pthreadattrsetaffinitynp.c
      src/pthreadattrgetaffinitynp.c
      src/pthreadgetaffinitynp.c
      src/pthreadsetaffinitynp.c
    )
  ENDIF()
ENDIF()

ADD_LIBRARY( rtems_posix ${POSIX_SRC} )
ADD_DEPENDENCIES( rtems_posix rtems_preinstall_headers )
